added swiper for buttons

--- a/index.html
+++ b/index.html
@@ -118,12 +118,11 @@
 
             </div>
             <div class="img__categories">
-                <button href="https://www.google.ru/">
+                <button id="prevBtn">
                     <img src="images/Arrow left.svg" width="54" height="54">
                 </button>
-                <button href="https://www.google.ru/">
+                <button id="nextBtn">
                     <img src="images/Arrow right.svg" width="54" height="54">
-
                 </button>
             </div>
         </div>
@@ -317,12 +316,11 @@
                     Find Popular Destination
                 </h2>
                 <div class="img__categories2">
-                    <button href="https://www.google.ru/">
+                    <button id="prevDestinationBtn">
                         <img src="images/Arrow left.svg" width="54" height="54">
                     </button>
-                    <button href="https://www.google.ru/">
+                    <button id="nextDestinationBtn">
                         <img src="images/Arrow right.svg" width="54" height="54">
-
                     </button>
 
                 </div>
