Initial commit with responsive header and mobile menu

--- a/index.html
+++ b/index.html
@@ -40,10 +40,13 @@
                     <span class="underline">
                                  
                     </span>
+
                 </a>
                 <a class="about__us" href="#about">
+
                     About us
                 </a>
+
                 <a class="destinations" href="#population">
                     Destinations
                 </a>
@@ -59,6 +62,7 @@
                 href="https://yandex.ru/video/preview/4616319017275353802F">
                 Book Now <img src="images/tg_head.svg" width="16" height="15">
             </a>
+
             <button class="mobile__menu__btn">
                 <span></span>
                 <span></span>
@@ -567,7 +571,7 @@
         </div>
         <div class="customer__about__us" id="about">
             <div class="customer__img">
-                <img src="images/Mask.png" class="customer__profile__image">
+                <img src="images/Mask.png" height="539" width="390">
             </div>
             <div class="customer__comment">
                 <span class="customer__border">
@@ -660,6 +664,7 @@
         </div>
 
         <div class="contacts__bottom" id="Blog">
+
             <div class="logo__information">
                 <a class="logo__feedbacks">
                     <img src="images/logo.svg" width="42" height="35">
@@ -696,6 +701,7 @@
             <div class="information__block">
 
 
+                
                 <ul>
                     <p class="category__inf">
                         Resources
@@ -729,8 +735,8 @@
                 </ul>
 
 
-                <ul>
-                    <p class="category__inf2">
+                <ul class="get_app_top">
+                    <p class="category__inf">
                         Get App
                     </p>
                     <li><a href="#" class="resource__link">App Store</a></li>
@@ -740,7 +746,9 @@
 
             </div>
         </div>
+
     </div>
+
 
 
 
